objects/Customer_Systems__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SiteAccount</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Systems (Account)</relationshipLabel>
        <relationshipName>Customer_Systems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alaram__c</fullName>
        <label>Alarm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlarmCompanyCode__c</fullName>
        <label>Monitored by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>ContractDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Form__c</fullName>
        <label>Contract Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <label>Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomerSite</label>
        <referenceTo>Customer_Site__c</referenceTo>
        <relationshipName>CustomerSystems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Customer System Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Systems</relationshipLabel>
        <relationshipName>Customer_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceLevelCode__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serviced_By__c</fullName>
        <label>Serviced By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Comments__c</fullName>
        <label>System Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyCode__c</fullName>
        <label>Warranty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyStartDate__c</fullName>
        <label>WarrantyStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_SAFE_record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Safe Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alaram__c</field>
            <operation>startsWith</operation>
            <value>3A0301</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DS_3G_to_LTE_Upgrade_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - 3G to LTE Upgrade</label>
        <queue>DS_3G_to_LTE_Upgrade</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Alt_Add_Devices_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Alt/Add Devices</label>
        <queue>DS_Alt_Add_Devices</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_App_Support_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - App Support</label>
        <queue>DS_App_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Break_In_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Break In</label>
        <queue>DS_Break_In</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Camera_Doorbell_Issue_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Camera (Doorbell) Issue</label>
        <queue>DS_Camera_Doorbell_Issue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Camera_Issue_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Camera Issue</label>
        <queue>DS_Camera_Issue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Code_Change_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Code Change</label>
        <queue>DS_Code_Change</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Communication_Failure_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Communication Failure</label>
        <queue>DS_Communication_Failure</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Emails_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Emails</label>
        <queue>DS_Emails</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_False_Alarms_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - False Alarms</label>
        <queue>DS_False_Alarms</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Followup_on_Scheduling_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Follow-Up on Scheduling</label>
        <queue>DS_Followup_on_Scheduling</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Install_Warranty_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Install Warranty</label>
        <queue>DS_Install_Warranty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Low_Battery_System_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Low Battery (System)</label>
        <queue>DS_Low_Battery_System</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DS_Low_Battery_Zone_Customer_Systems</fullName>
        <filterScope>Queue</filterScope>
        <label>DS - Low Battery (Zone)</label>
        <queue>DS_Low_Battery_Zone</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CustomerSystems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Systems</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>